fix: team card spacing (ustal)

--- a/src/css/components/_banner.scss
+++ b/src/css/components/_banner.scss
@@ -47,18 +47,25 @@
     &__title{
       font-size: 80px;
     }
+
+    &__subtitle{
+      text-align: center;
+    }
   }
 }
 
 @media (max-width:660px){
   .banner{
+    height: 75vh;
+
+    background-size: 50% auto !important;
+
 
     &__title{
       font-size: 58px;
     }
 
     &__subtitle{
-      text-align: center;
       margin: 0 3.5rem;
     }
   }
