--- a/src/css/components/_map.scss
+++ b/src/css/components/_map.scss
@@ -127,3 +127,11 @@
     max-width: 350px;
   }
 }
+
+@media (max-width: 660px) {
+
+
+  .custom-popup-container {
+    max-width: 305px;
+  }
+}
