--- a/src/css/components/_team.scss
+++ b/src/css/components/_team.scss
@@ -17,6 +17,7 @@
   &__list {
     margin-top: 3rem;
   }
+
 }
 
 .text-body1 li::marker {
@@ -47,8 +48,6 @@ ul {
 @media (max-width:1024px) {
   .team {
 
-    padding: 0;
-
     &__title {
       font-size: 48px;
     }
@@ -63,7 +62,12 @@ ul {
       background-size: cover;
       width: 100%;
       padding: 3rem 0;
+      margin-top: 0;
       margin-bottom: 0;
+
+      &>ul {
+        margin-top: 10rem;
+      }
     }
   }
 }
@@ -75,11 +79,8 @@ ul {
       font-size: 36px;
     }
 
-    &__list {
-
-      &>ul {
-        margin-top: 5rem;
-      }
+    &__list{
+      padding: 2rem 0;
     }
   }
 }
@@ -90,5 +91,13 @@ ul {
     &__title {
       font-size: 24px;
     }
+
+    &__list {
+
+      &>ul {
+        margin-top: 6rem;
+      }
+    }
+
   }
 }
